fixed text align of cell item - diameter
text-align for diameter in last row changed from center to left align

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@
 
 .textual_data_last_row{
   border-bottom: 4mm ridge rgba(25, 81, 145, 0.8);
+  text-align: left;
 }
 
 th{
